--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: flutter_resume
-description: A new Flutter application.
+description: B. Cihan Cengiz resume.
 publish_to: 'none'
 version: 1.0.0+1
 
@@ -16,6 +16,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^1.11.1
+  build_web_compilers: ^2.12.2
 
 flutter:
   uses-material-design: true
