--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,20 +4,20 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.7.0 <3.0.0'
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  timelines: ^0.0.2+1
-  font_awesome_flutter: ^8.11.0
-  url_launcher: ^5.7.10
+  timelines: ^0.1.0
+  font_awesome_flutter: ^10.1.0
+  url_launcher: ^6.0.20
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^1.11.1
-  build_web_compilers: ^2.12.2
+  build_runner: ^2.1.8
+  build_web_compilers: ^3.2.2
 
 flutter:
   uses-material-design: true
